[tool.poetry]
name = "pytest_nlcov"
version = "0.2.0"
description = "Pytest plugin to get the coverage of the new lines (based on git diff) only"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/pytest_nlcov"
readme = "README.md"
packages = [
    { include = "pytest_nlcov" },
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
GitPython = ">=3.1.17"
unidiff = ">=0.6.0"
typer = ">=0.3.2"
coverage = ">=5.5"
pytest-cov = ">=2.10.1"

[tool.poetry.dev-dependencies]
mypy = ">=0.790"
pylint = ">=2.6.0"
vulture = ">=2.1"
isort = ">=5.6.4"
black = ">=21.6b0"
pytest-mock = ">=3.6.1"

[tool.poetry.scripts]
nlcov = 'pytest_nlcov:cli'

[tool.black]
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
known_first_party = ["pytest_nlcov"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob=\"*.md\" --cov=pytest_nlcov  --cov-append --cov-report xml:coverage.xml --cov-report term-missing -ra -p pytester --strict"
testpaths = [
    "pytest_nlcov",
    "tests"
]

[tool.poetry.plugins.pytest11]
"nlcov" = "pytest_nlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
